added cython function and reran

--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -38,17 +38,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.5.2 |Anaconda 4.1.1 (x86_64)| (default, Jul  2 2016, 17:52:12) \n",
-      "[GCC 4.2.1 Compatible Apple LLVM 4.2 (clang-425.0.28)]\n",
-      "Numpy: 1.11.1\n",
-      "Pandas: 0.18.1\n",
-      "Numba: 0.26.0\n",
-      "Numexpr: 2.6.0\n",
+      "Python: 3.4.4 |Anaconda 2.3.0 (x86_64)| (default, Jan  9 2016, 17:30:09) \n",
+      "[GCC 4.2.1 (Apple Inc. build 5577)]\n",
+      "Numpy: 1.10.4\n",
+      "Pandas: 0.18.0\n",
+      "Numba: 0.19.1\n",
+      "Numexpr: 2.5.2\n",
       "Intel(R) Math Kernel Library Version 11.3.3 Product Build 20160413 for Intel(R) 64 architecture applications\n",
       "Processor: i386\n",
       "# of Cores: 4\n",
-      "Machine: AMD64\n",
-      "Architecture: ('64bit', 'WindowsPE')\n"
+      "Machine: x86_64\n",
+      "Architecture: ('64bit', '')\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -129,10 +129,10 @@
    "source": [
     "#instead of using np.random.uniform to define these arrays, converting the points list\n",
     "#so the same values are used for all methods\n",
-    "lat_np = np.empty(size)\n",
-    "long_np = np.empty(size)\n",
-    "alt_np = np.empty(size)\n",
-    "geoid_np = np.empty(size)\n",
+    "lat_np = np.empty(size, dtype=np.double)\n",
+    "long_np = np.empty(size, dtype=np.double)\n",
+    "alt_np = np.empty(size, dtype=np.double)\n",
+    "geoid_np = np.empty(size, dtype=np.double)\n",
     "for i, point in enumerate(points):\n",
     "    lat_np[i] = point[0]\n",
     "    long_np[i] = point[1]\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
        "(-2856867.422762463, -4132876.8004144537, -3916387.577890978)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 2.08 s per loop\n"
+      "1 loop, best of 5: 1.82 s per loop\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +307,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 193 ms per loop\n"
+      "1 loop, best of 5: 173 ms per loop\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 191 ms per loop\n"
+      "1 loop, best of 5: 169 ms per loop\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +426,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 181 ms per loop\n"
+      "1 loop, best of 5: 183 ms per loop\n"
      ]
     }
    ],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 194 ms per loop\n"
+      "1 loop, best of 5: 175 ms per loop\n"
      ]
     }
    ],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +522,7 @@
        " array(-3916387.577890978))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 45.3 ms per loop\n"
+      "1 loop, best of 5: 43.2 ms per loop\n"
      ]
     }
    ],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -585,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 53.4 ms per loop\n"
+      "1 loop, best of 5: 49 ms per loop\n"
      ]
     }
    ],
@@ -598,12 +598,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Cython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Cython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext Cython\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext Cython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukestarnes/anaconda/lib/python3.4/site-packages/IPython/utils/path.py:264: UserWarning: get_ipython_cache_dir has moved to the IPython.paths module\n",
+      "  warn(\"get_ipython_cache_dir has moved to the IPython.paths module\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%cython\n",
+    "from cython cimport boundscheck, wraparound\n",
+    "from libc.math cimport sin, cos, sqrt, M_PI\n",
+    "import numpy as np\n",
+    "cimport numpy as cnp\n",
+    "\n",
+    "cdef double geoidSep = -29.701  # meters \n",
+    "\n",
+    "cdef double a = 6378137       # Semi-major axis \n",
+    "cdef double b = 6356752.3142  # Semi-minor axis\n",
+    "cdef double f = (a - b) / a   # flattening\n",
+    "cdef double e = 0.081819191\n",
+    "cdef double ecc = e*e\n",
+    "cdef double radians = M_PI/180.0\n",
+    "\n",
+    "@boundscheck(False)\n",
+    "@wraparound(False)\n",
+    "def LLAtoXYZ_cy(double[:] latitude, \n",
+    "                double[:] longitude, \n",
+    "                double[:] altitude, \n",
+    "                double[:] geoidSepIn):\n",
+    "    cdef int i\n",
+    "    cdef int l = len(latitude)\n",
+    "    \n",
+    "    cdef double[:] x = np.empty(l, dtype=np.double)\n",
+    "    cdef double[:] y = np.empty(l, dtype=np.double)\n",
+    "    cdef double[:] z = np.empty(l, dtype=np.double)\n",
+    "    \n",
+    "    cdef double latitude_rad\n",
+    "    cdef double longitude_rad\n",
+    "    cdef double height\n",
+    "    cdef double s_lat\n",
+    "    cdef double c_lat\n",
+    "    cdef double r\n",
+    "    \n",
+    "    for i in range(l):\n",
+    "        latitude_rad = radians*latitude[i]\n",
+    "        longitude_rad = radians*longitude[i]\n",
+    "        height = altitude[i] - geoidSepIn[i]\n",
+    "        s_lat  = sin(latitude_rad)\n",
+    "        c_lat  = cos(latitude_rad)\n",
+    "         \n",
+    "        r = a / sqrt(1 - ecc * s_lat * s_lat)\n",
+    "        x[i] = (r + height) * c_lat * cos(longitude_rad)\n",
+    "        y[i] = (r + height) * c_lat * sin(longitude_rad)\n",
+    "        z[i] = ((1-ecc) * r + height) * s_lat\n",
+    "        \n",
+    "    return x,y,z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2856867.422762463 -4132876.8004144537 -3916387.577890978\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_c = LLAtoXYZ_cy(np.array([-38.123456], dtype=np.double),\n",
+    "                     np.array([-124.65432], dtype=np.double),\n",
+    "                     np.array([230], dtype=np.double),\n",
+    "                       np.array([-20], dtype=np.double))\n",
+    "print (results_c[0][0], results_c[1][0], results_c[2][0])\n",
+    "#X= -2856867.422762463\n",
+    "#Y= -4132876.8004144537\n",
+    "#Z= -3916387.577890978)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 5: 61.3 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = %timeit -n 1 -r 5 -o results=LLAtoXYZ_cy(lat_np,long_np,alt_np,geoid_np)\n",
+    "timing_results.loc['Cython'] = timing_results_filler(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -614,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -638,49 +778,56 @@
        "      <th>Numexpr with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.045299</td>\n",
-       "      <td>45.881279</td>\n",
+       "      <td>0.043212</td>\n",
+       "      <td>42.227313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numexpr with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.053396</td>\n",
-       "      <td>38.923847</td>\n",
+       "      <td>0.048998</td>\n",
+       "      <td>37.241017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Numba with Numpy Arrays</th>\n",
+       "      <th>Cython</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.181350</td>\n",
-       "      <td>11.460475</td>\n",
+       "      <td>0.061287</td>\n",
+       "      <td>29.773641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pandas (Vectorized)</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.169171</td>\n",
+       "      <td>10.786283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numpy</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.190800</td>\n",
-       "      <td>10.892863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Numpy</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.193426</td>\n",
-       "      <td>10.745000</td>\n",
+       "      <td>0.172981</td>\n",
+       "      <td>10.548699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.194023</td>\n",
-       "      <td>10.711949</td>\n",
+       "      <td>0.174612</td>\n",
+       "      <td>10.450185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Numba with Numpy Arrays</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.183170</td>\n",
+       "      <td>9.961918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Native Python</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>2.078361</td>\n",
+       "      <td>1.824724</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -689,16 +836,17 @@
       ],
       "text/plain": [
        "                                Loops  Repeat  Best (sec)  Vs Native Python\n",
-       "Numexpr with Numpy Arrays         1.0     5.0    0.045299         45.881279\n",
-       "Numexpr with Vectorized Pandas    1.0     5.0    0.053396         38.923847\n",
-       "Numba with Numpy Arrays           1.0     5.0    0.181350         11.460475\n",
-       "Pandas (Vectorized)               1.0     5.0    0.190800         10.892863\n",
-       "Numpy                             1.0     5.0    0.193426         10.745000\n",
-       "Numba with Vectorized Pandas      1.0     5.0    0.194023         10.711949\n",
-       "Native Python                     1.0     5.0    2.078361          1.000000"
+       "Numexpr with Numpy Arrays         1.0     5.0    0.043212         42.227313\n",
+       "Numexpr with Vectorized Pandas    1.0     5.0    0.048998         37.241017\n",
+       "Cython                            1.0     5.0    0.061287         29.773641\n",
+       "Pandas (Vectorized)               1.0     5.0    0.169171         10.786283\n",
+       "Numpy                             1.0     5.0    0.172981         10.548699\n",
+       "Numba with Vectorized Pandas      1.0     5.0    0.174612         10.450185\n",
+       "Numba with Numpy Arrays           1.0     5.0    0.183170          9.961918\n",
+       "Native Python                     1.0     5.0    1.824724          1.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,9 +867,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Py3.5]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Py3.5]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -733,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
