--- a/geo_timing.ipynb
+++ b/geo_timing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -54,11 +54,11 @@
    ],
    "source": [
     "print(\"Python: {}\\nNumpy: {}\\nPandas: {}\\nNumba: {}\\nNumexpr: {}\\n{}\".format(sys.version,\n",
-    "                                                                                   np.__version__,\n",
-    "                                                                                   pd.__version__,\n",
-    "                                                                                   numba.__version__,\n",
-    "                                                                                   ne.__version__,\n",
-    "                                                                                   ne.get_vml_version()))\n",
+    "                                                                             np.__version__,\n",
+    "                                                                             pd.__version__,\n",
+    "                                                                             numba.__version__,\n",
+    "                                                                             ne.__version__,\n",
+    "                                                                             ne.get_vml_version()))\n",
     "print(\"Processor: {}\\n# of Cores: {}\\nMachine: {}\\nArchitecture: {}\".format(platform.processor(),\n",
     "                                                                            os.cpu_count(),\n",
     "                                                                            platform.machine(),\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,10 @@
     "size = 1000000\n",
     "points = []\n",
     "for i in range(size):\n",
-    "    points.append((rnd.uniform(-85,85),rnd.uniform(-175,175),rnd.uniform(-50,12000), rnd.uniform(-50,50)))\n",
+    "    points.append((rnd.uniform(-85,85),\n",
+    "                   rnd.uniform(-175,175),\n",
+    "                   rnd.uniform(-50,12000), \n",
+    "                   rnd.uniform(-50,50)))\n",
     "print ('{} of {} containing {}.'.format(type(points),type(points[0]),type(points[0][0])))"
    ]
   },
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +228,7 @@
        "(-2856867.422762463, -4132876.8004144537, -3916387.577890978)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 1.82 s per loop\n"
+      "1 loop, best of 5: 1.8 s per loop\n"
      ]
     }
    ],
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +310,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 173 ms per loop\n"
+      "1 loop, best of 5: 189 ms per loop\n"
      ]
     }
    ],
@@ -364,19 +367,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas (Serialized)"
+    "# Pandas (Serialized)\n",
+    "added to show how slow pandas can be if not vectorized"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "r = %timeit -n 1 -r 5 -o points_df['X'],points_df['Y'],points_df['Z']  = zip(*points_df.apply(lambda row: LLAtoXYZ_raw(row[0],row[1],row[2],row[3]), axis=1))\n",
-    "timing_results.loc['Pandas (Serialized)'] = timing_results_filler(r)"
+    "#r = %timeit -n 1 -r 5 -o points_df['X'],points_df['Y'],points_df['Z'] = zip(*points_df.apply(lambda row: LLAtoXYZ_raw(row[0],row[1],row[2],row[3]), axis=1))\n",
+    "#timing_results.loc['Pandas (Serialized)'] = timing_results_filler(r)"
    ]
   },
   {
@@ -388,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 169 ms per loop\n"
+      "1 loop, best of 5: 188 ms per loop\n"
      ]
     }
    ],
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +430,7 @@
        "(-2856867.4227624629, -4132876.8004144537, -3916387.5778909782)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 183 ms per loop\n"
+      "1 loop, best of 5: 182 ms per loop\n"
      ]
     }
    ],
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 175 ms per loop\n"
+      "1 loop, best of 5: 180 ms per loop\n"
      ]
     }
    ],
@@ -509,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +526,7 @@
        " array(-3916387.577890978))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 43.2 ms per loop\n"
+      "1 loop, best of 5: 43.6 ms per loop\n"
      ]
     }
    ],
@@ -576,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -585,7 +589,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 49 ms per loop\n"
+      "1 loop, best of 5: 53.6 ms per loop\n"
      ]
     }
    ],
@@ -603,27 +607,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Cython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext Cython\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext Cython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -716,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -725,7 +720,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 5: 61.3 ms per loop\n"
+      "1 loop, best of 5: 68.8 ms per loop\n"
      ]
     }
    ],
@@ -743,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -754,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -778,56 +773,56 @@
        "      <th>Numexpr with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.043212</td>\n",
-       "      <td>42.227313</td>\n",
+       "      <td>0.043557</td>\n",
+       "      <td>41.261702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numexpr with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.048998</td>\n",
-       "      <td>37.241017</td>\n",
+       "      <td>0.053640</td>\n",
+       "      <td>33.505603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cython</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.061287</td>\n",
-       "      <td>29.773641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pandas (Vectorized)</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.169171</td>\n",
-       "      <td>10.786283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Numpy</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.172981</td>\n",
-       "      <td>10.548699</td>\n",
+       "      <td>0.068755</td>\n",
+       "      <td>26.139951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Vectorized Pandas</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.174612</td>\n",
-       "      <td>10.450185</td>\n",
+       "      <td>0.179867</td>\n",
+       "      <td>9.992090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Numba with Numpy Arrays</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.183170</td>\n",
-       "      <td>9.961918</td>\n",
+       "      <td>0.181816</td>\n",
+       "      <td>9.884963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pandas (Vectorized)</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.187702</td>\n",
+       "      <td>9.575012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Numpy</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.188832</td>\n",
+       "      <td>9.517707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Native Python</th>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.824724</td>\n",
+       "      <td>1.797244</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -836,31 +831,23 @@
       ],
       "text/plain": [
        "                                Loops  Repeat  Best (sec)  Vs Native Python\n",
-       "Numexpr with Numpy Arrays         1.0     5.0    0.043212         42.227313\n",
-       "Numexpr with Vectorized Pandas    1.0     5.0    0.048998         37.241017\n",
-       "Cython                            1.0     5.0    0.061287         29.773641\n",
-       "Pandas (Vectorized)               1.0     5.0    0.169171         10.786283\n",
-       "Numpy                             1.0     5.0    0.172981         10.548699\n",
-       "Numba with Vectorized Pandas      1.0     5.0    0.174612         10.450185\n",
-       "Numba with Numpy Arrays           1.0     5.0    0.183170          9.961918\n",
-       "Native Python                     1.0     5.0    1.824724          1.000000"
+       "Numexpr with Numpy Arrays         1.0     5.0    0.043557         41.261702\n",
+       "Numexpr with Vectorized Pandas    1.0     5.0    0.053640         33.505603\n",
+       "Cython                            1.0     5.0    0.068755         26.139951\n",
+       "Numba with Vectorized Pandas      1.0     5.0    0.179867          9.992090\n",
+       "Numba with Numpy Arrays           1.0     5.0    0.181816          9.884963\n",
+       "Pandas (Vectorized)               1.0     5.0    0.187702          9.575012\n",
+       "Numpy                             1.0     5.0    0.188832          9.517707\n",
+       "Native Python                     1.0     5.0    1.797244          1.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "timing_results.sort_values('Best (sec)')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: %timeit runs the function X number of loops and then repeats this for Y runs. It reports the average loop time (time for run / X) for the best of the Y runs. X is termed \"Loops\" and Y is termed \"Repeat\". \n",
-    "Example: Loops = X = 1000 & Repeat = Y = 3. Best = 20ms. This would mean that it ran 3000 total loops (3 times of running 1000 loops) and the fastest of the 3 super cycles was 20,000 ms meaning the average time was 20ms."
    ]
   }
  ],
